--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
       <div id="front" class="album">
         <div id="title-box">
 
+          <h4>PHARRELL WILLIAMS</h4>
+          <h2>HAPPY</h2>
+          <h4>| FROM DESPICABLE ME 2 |</h4>
+
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
 
-          <!-- Level 2 'HAPPY' Header -->
+          <!-- Level 2 '' Header -->
 
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
 
@@ -22,23 +26,25 @@
       <div id="back" class="album">
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
-
+          <h3>| &nbsp;&nbsp; FROM DESPICABLE ME 2 &nbsp;&nbsp; |</h3>
         <!-- Level 1 'HAPPY' Header -->
-
+          <h1>HAPPY</h1>
         <!-- Level 3 'WRITTEN BY...' Header -->
-
+          <h3>WRITTEN BY...</h3>
         <!-- pararaph text 'PUBLISHED BY...' -->
+          <p>PUBLISHED BY...</p>
 
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
+        <span>PHARRELLWILLIAMS.COM</span>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-
+            <img src=https://s3.amazonaws.com/learn-verified/columbia-logo.png>
         <!-- span text 'COLUMBIARECORDS.COM' -->
-
+            <span>COLUMBIARECORDS.COM'</span>
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
-
+          <img src=https://s3.amazonaws.com/learn-verified/sony-logo.png>
       </div>
     </div>
   </body>
